# dossier

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  FUTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run.sh  vercel.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
docs/: STYLE.md
frontend/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Charts.tsx  Profile.tsx  RecordCard.tsx  ResultsDashboard.tsx  SearchForm.tsx  SourceStatusBar.tsx  StatCards.tsx  ui.tsx
frontend/e2e/: company.spec.ts  directory.spec.ts  partnerships.spec.ts  projects.spec.ts  report.spec.ts  sectors.spec.ts  smoke.spec.ts
frontend/lib/: analytics.ts  api.ts  demo.ts  demoProfiles.ts  exports.ts  format.test.ts  format.ts  partnershipTypes.ts  projects.ts  reportExport.ts  safeUrl.test.ts  safeUrl.ts  sampleDirectory.ts  samplePartnership.ts  sampleSector.ts  sample_data.json  sectorStream.ts  sectorTypes.ts  sources.ts  startHere.data.ts  startHere.types.ts  store.tsx  types.ts  xlsx.test.ts  xlsx.ts
frontend/scripts/: refreshStartHere.mjs
src/etl_pipeline/: __init__.py  cli.py  config.py  http_client.py  leadership.py  models.py  narrative.py  (+5 more)
tests/: conftest.py  test_api.py  test_api_guard.py  test_api_partnerships.py  test_api_sector.py  test_cli.py  test_config.py  test_connector_clinicaltrials.py  test_connector_nih_reporter.py  test_connector_openalex.py  test_connector_sec_edgar.py  test_core_extract.py  test_core_transform.py  test_dedup.py  test_directory.py  test_http_client.py  test_leadership.py  test_load.py  test_models.py  test_narrative.py  test_net_guard.py  test_order.py  test_partnerships.py  test_pipeline.py  test_profile.py  test_projects_store.py  test_registry.py  test_resolve.py  test_sector_membership.py  test_sector_orchestrator.py  test_sector_report.py  test_text.py  test_tickers_cache.py  test_validate.py
(+115 files in other folders)
