[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-source-etl-pipeline"
version = "0.1.0"
description = "A modular, keyless multi-source ETL pipeline for public research and company data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Aidan Colvin" }]
keywords = ["etl", "pipeline", "sec-edgar", "openalex", "clinicaltrials", "nih-reporter"]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "httpx>=0.27",
       "fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
msetl = "etl_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/aidancolvin/multi-source-etl-pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["etl_pipeline"]
